--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,12 +1,26 @@
 .cover__background {
-    width: 92.5%;
-    position: absolute;
-    z-index: 0;
+    background: url(../../../sprint-3-images/__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     object-fit: cover;
+    width: 100%;
+    max-height: 740px;
 }
 
 @media screen and (max-width: 1024px){
     .cover__background {
-        width: 100%;
+        max-height: 640px;
+    } 
+}
+
+@media screen and (max-width: 768px){
+    .cover__background {
+        max-height: 480px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .cover__background {
+        height: 200px;
     }
 }
