--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,17 +1,20 @@
 .cover__overlay {
-    width: 92.5%;
-    height: 740px;
-    background: #2A2C2F;
-    opacity: 0.3;
-    position: absolute;
-    z-index: 2;
+    width: 100%;
+    /* padding: 245px 312px 245px; */
+    background:rgba(42, 44, 47, 0.3);
+    /* z-index: 2; */
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    text-decoration: none;
 }
 
 .cover__overlay:hover {
-    opacity: 0.8;
+    background:rgba(42, 44, 47, 0.8);
 }
 
-@media screen and (max-width: 1024px){
+/* @media screen and (max-width: 1024px){
     .cover__overlay {
         width: 100%;
         height: 640px;
@@ -24,8 +27,8 @@
     }
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 440px){
     .cover__overlay {
         height: 200px;
     }
-}
+} */
