--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,29 +1,45 @@
 .cover__title {
     margin: 0;
-    max-width: 560px;
+    padding-top: 245px;
+    width: 560px;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
     font-family: Inter;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    text-decoration: none;
-    text-align: center;
-    align-self: center;
     color: #FFFFFF;
     z-index: 3;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 1024px){
     .cover__title {
-        max-width: 400px;
-        font-size: 52px;
-        line-height: 56px;
+        padding-top: 195px;
     }
 }
-@media screen and (max-width: 440px){
+
+@media screen and (max-width: 768px){
     .cover__title {
-        max-width: 250px;
+        padding-top: 115px;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .cover__title {
+        max-width: 288px;
+        padding-top: 74px;
         font-size: 32px;
-        line-height: 36px;
+        line-height: 35px;
+    }
+} 
+
+@media screen and (max-width: 320px){
+    .cover__title {
+        /* max-width: 288px; */
+        /* font-size: 32px;
+        line-height: 35px; */
+        padding-top: 33px;
     }
 }
