--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,32 +1,18 @@
 .cover {
     margin: 92px auto 0;
-    width: 92.5%;
-    height: 740px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
+    max-width: calc(1280px - 2*48px);
 }
 
 @media screen and (max-width: 1024px){
     .cover {
-        width: 100%;
-        height: 640px;
+        max-width: 100%;
     }
+    
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 1024px){
     .cover {
-        height: 540px;
-    }
-}
-
-@media screen and (max-width: 440px){
-    .cover {
-        width: 100%;
-        height: 200px;
         margin: 66px auto 0;
     }
+    
 }
