--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -17,7 +17,7 @@
 @media screen and (max-width: 768px){
     .footer {
         width: 94%;
-        margin: 5.5px 0.7rem 0;
+        margin: 5.5rem 0.7rem 0;
     }
 }
 
