--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content);
+    grid-template-columns: repeat(5, minmax(min-content, max-content));
     gap: 16px;
     list-style-type: none;
 }
@@ -10,7 +10,7 @@
 @media screen and (max-width: 700px){
     .footer__links {
         grid-template-columns: minmax(min-content, max-content);
-        grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content);;
+        grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content);
         gap: 32px;
     }
 }
