--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,4 +1,4 @@
-.place__website__link {
+.place__link {
     margin: 0;
     padding: 0;
     font-family: Inter;
@@ -11,6 +11,6 @@
     opacity: 1;
 }
 
-.place__website__link:hover {
+.place__link:hover {
     opacity: 0.8;
 }
