--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,7 +5,7 @@
     text-align: center;
     justify-content: center;
     align-content: center;
-    font-family: Inter;
+    font-family: "Inter";
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
