--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,7 +2,7 @@
     width: 186px;
     margin: 0;
     padding: 0;
-    font-family: Inter;
+    font-family: "Inter";
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
