--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -5,7 +5,7 @@
     padding-left: 148px;
     width: 690px;
     height: 90px;
-    font-family: Inter;
+    font-family: "Inter";
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
