--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,7 +3,7 @@
     margin-top: 40px;
     padding-left: 148px;
     width: 100%;
-    font-family: Inter;
+    font-family: "Inter";
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
