--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption {
     margin-top: 8px;
     width: 100%;
-    font-family: Inter;
+    font-family: "Inter";
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
