--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,7 +3,7 @@
     margin-top: 4rem;
     align-self: center;
     width: 100%;
-    height: 615px;
+    max-height: 615px;
     object-fit: cover;
 }
 
