--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,7 +3,7 @@
     text-align: center;
     align-self: center;
     width: 73%;
-    font-family: Inter;
+    font-family: "Inter";
     font-style: normal;
     font-weight: 900;
     font-size: 6rem;
