--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -9,21 +9,18 @@
 
 @media screen and (max-width: 1024px){
     .lead__image {
-        width: 100%;
-        height: 580px;
+        max-height: 580px;
     }
 }
 
 @media screen and (max-width: 768px){
     .lead__image {
-        width: 100%;
-        height: 480px;
+        max-height: 480px;
     }
 }
 
 @media screen and (max-width: 320px){
     .lead__image {
-        width: 100%;
-        height: 200px;
+        max-height: 200px;
     }
 }
