--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,8 @@
 .footer {
-    margin: 5.75rem 3rem 0;
+    margin: 5.75rem auto 0;
     padding-bottom: 0.7rem;
     width: 92.5%;
+    max-width: 1280px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -17,7 +18,7 @@
 @media screen and (max-width: 768px){
     .footer {
         width: 94%;
-        margin: 5.5rem 0.7rem 0;
+        margin: 5.5rem auto 0;
     }
 }
 
