--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,9 @@
 .header {
-    margin: 0 3rem 0;
+    margin: 0 auto 0;
     padding-top: 28px;
     width: 92.5%;
+    max-width: 1280px;
+    justify-items: center;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -9,9 +11,9 @@
 }
 
 @media screen and (max-width: 768px){
-    .header {margin: 0 1.5rem 0;}
+    .header {margin: 0 auto 0;}
 }
 
 @media screen and (max-width: 320px){
-    .header {margin: 0 1rem 0;}
+    .header {margin: 0 auto 0;}
 }
