--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -7,7 +7,7 @@
     height: 90px;
     font-family: "Inter";
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 12px;
     line-height: 18px;
     list-style-type: none;
@@ -17,7 +17,7 @@
 
 @media screen and (max-width: 1024px){
     .intro__list {
-        width: 150%;
+        width: 67%;
         padding-left: 48px;
     }
 }
