--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,10 +2,10 @@
     margin: 0;
     margin-top: 40px;
     padding-left: 148px;
-    width: 100%;
+    width: 55%;
     font-family: "Inter";
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 163%;
     color: #FFFFFF;
@@ -13,7 +13,7 @@
 
 @media screen and (max-width: 1024px){
     .intro__text {
-        width: 150%;
+        width: 67%;
         padding-left: 48px;
     }
 }
