--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,8 @@
 .intro {
-    margin-top: 88px;
+    margin: 88px auto 0;
     display: flex;
-    width: 54%;
+    width: 100%;
+    max-width: 1280px;
     flex-direction: column;
 }
 
@@ -14,6 +15,6 @@
 @media screen and (max-width: 320px){
     .intro {
         width: 100%;
-        margin-top: 64px;
+        margin: 64px auto 0;
     }
 }
