--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,7 +3,7 @@
     width: 100%;
     font-family: "Inter";
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 1.5px;
