--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,7 +4,7 @@
     width: 65%;
     font-family: "Inter";
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 2rem;
     line-height: 2.25rem;
     color: #FFFFFF;
