--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,38 +1,47 @@
 .place__image {
-    width: 484px;
-    height: 460px;
+    max-width: 484px;
+    max-height: 460px;
 }
 
 @media screen and (max-width: 1024px){
     .place__image {
-        width: 440px;
-        height: 440px;
+        max-width: 440px;
+        max-height: 440px;
     }
 } 
 
 @media screen and (max-width: 960px){
     .place__image {
-        width: 400px;
-        height: 400px;
+        max-width: 400px;
+        max-height: 400px;
     }
 } 
 
 @media screen and (max-width: 860px){
     .place__image {
-        width: 372px;
-        height: 372px;
+        max-width: 372px;
+        max-height: 372px;
+    }
+}
+
+@media screen and (max-width: 860px){
+    .place__image {
+        max-width: 350px;
+        max-height: 350px;
     }
 }
 
 @media screen and (max-width: 768px){
     .place__image {
-        width: 340px;
-        height: 340px;
+        max-width: 340px;
+        max-height: 340px;
     }
 }
 
-@media screen and (max-width: 390px){
+@media screen and (max-width: 393px){
     .place__image {
-        width: 320px;
+        width: 100%;
+        max-width: 320px;
+        max-height: 320px;
     }
 }
