--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,16 +2,17 @@
   margin: 0;
   font-family: "Inter";
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 18px;
   line-height: 163%;
+  box-sizing: border-box;
 }
 
 .place__paragraph:nth-of-type(2) {
   margin-top: 1.5rem;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 795px){
   .place__paragraphs {
     font-size: 16px;
   }
