--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,6 +5,15 @@
     grid-template-columns: 1fr 1fr;
     grid-row-gap: 48px;
     grid-column-gap: 40px;
+    box-sizing: border-box;
+}
+
+@media screen and (max-width: 1201px){
+    .place {
+        /* column-gap: px; */
+        width: 80%;
+    }
+
 }
 
 @media screen and (max-width: 1024px){
@@ -18,6 +27,13 @@
 @media screen and (max-width: 860px){
     .place {
         column-gap: 16px;
+    }
+}
+
+@media screen and (max-width: 795px){
+    .place {
+        column-gap: 12px;
+        width: 90.75%;
     }
 }
 
@@ -38,6 +54,7 @@
 @media screen and (max-width: 390px){
     .place {
         width: 100%;
+        max-width: 320px;
         row-gap: 32px;
     }
 }
