--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -9,39 +9,45 @@
 @media screen and (max-width: 1024px){
     .places {
         width: 928px;
-        margin: 92px auto 0;
     }
 }
 
 @media screen and (max-width: 960px){
     .places {
-        width: 832px;
+        max-width: 832px;
     }
 }
 
 @media screen and (max-width: 860px){
     .places {
-        width: 776px;
+        max-width: 776px;
+    }
+}
+
+@media screen and (max-width: 795px){
+    .places {
+        max-width: 750px;
     }
 }
 
 @media screen and (max-width: 768px){
     .places {
         margin: 88px auto 0;
-        width: 720px;
+        max-width: 720px;
     }
 }
 
 @media screen and (max-width: 764px){
     .places {
-        width: calc(100% - 2*24px);
+        max-width: calc(100% - 2*24px);
     }
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 393px){
     .places {
-        margin: 64px auto 0;
-        width: 320px;
+        margin: 64px 0 0;
+        width: 100%;
+        max-width: 320px;
         gap: 50px;
     }
 }
