--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,7 +5,7 @@
     text-align: center;
     justify-content: center;
     align-content: center;
-    font-family: "Inter";
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -37,9 +37,6 @@
 
 @media screen and (max-width: 320px){
     .cover__title {
-        /* max-width: 288px; */
-        /* font-size: 32px;
-        line-height: 35px; */
         padding-top: 33px;
     }
 }
