--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,18 +1,31 @@
 .cover {
     margin: 92px auto 0;
-    max-width: calc(1280px - 2*48px);
+    width: 92.5%;
+    max-width: 1280px;
+    background: url(../../sprint-3-images/__background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    max-height: 740px;
 }
 
 @media screen and (max-width: 1024px){
     .cover {
-        max-width: 100%;
+        width: 100%;
+        max-height: 640px;
     }
     
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 768px){
     .cover {
         margin: 66px auto 0;
+        max-height: 480px;
     }
-    
+}
+
+@media screen and (max-width: 320px){
+    .cover__cover {
+        height: 200px;
+    }
 }
