--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,7 +2,7 @@
     width: 186px;
     margin: 0;
     padding: 0;
-    font-family: "Inter";
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -16,4 +16,11 @@
         padding-top: 3rem;
         text-align: start;
     }
+}
+
+@media screen and (max-width: 320px){
+    .footer__copyright {
+        line-height: 14px;
+    }
+    
 }
