--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,7 +3,7 @@
     padding: 0;
     list-style-type: none;
     text-decoration: none;
-    font-family: Inter;
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -14,4 +14,12 @@
 
 .footer__link:hover {
     opacity: 0.8;
+}
+
+@media screen and (max-width: 320px){
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
+    }
+    
 }
