--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,6 @@
 .header__lang-link {
     margin: 0;
-    font-family: "Inter";
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
@@ -12,6 +12,10 @@
 
 .header__lang-link:nth-of-type(2) {
     margin-right: 0;
+}
+
+.header__lang-link:hover {
+    text-decoration-line: underline;
 }
 
 @media screen and (max-width: 320px){
