--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,10 +10,8 @@
     background-color: #2A2C2F;
 }
 
-@media screen and (max-width: 768px){
-    .header {margin: 0 auto 0;}
-}
-
 @media screen and (max-width: 320px){
-    .header {margin: 0 auto 0;}
+    .header {
+        padding-top: 16px;
+    }
 }
