--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -9,6 +9,7 @@
 
 @media screen and (max-width: 1024px){
     .lead__image {
+        margin-top: 3.5rem;
         max-height: 580px;
     }
 }
@@ -21,6 +22,7 @@
 
 @media screen and (max-width: 320px){
     .lead__image {
+        margin-top: 2.5rem;
         max-height: 200px;
     }
 }
