--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,24 +2,24 @@
     margin: 2rem auto 0;
     text-align: center;
     width: 65%;
-    font-family: "Inter";
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 1.875rem;
     line-height: 2.25rem;
     color: #FFFFFF;
 }
 
 @media screen and (max-width: 1024px){
     .lead__subtitle {
-    width: 90%;
+        width: 90%;
     }
 }
 
 @media screen and (max-width: 320px){
     .lead__subtitle {
-    width: 288px;
-    font-size: 1rem;
-    line-height: 1.25rem;
+        width: 288px;
+        font-size: 1rem;
+        line-height: 1.25rem;
     }
 }
