--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,9 @@
 .lead__title {
-    margin: 0;
+    margin: 0 auto 0;
     text-align: center;
     align-self: center;
     width: 73%;
-    font-family: "Inter";
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 6rem;
@@ -17,7 +17,7 @@
     }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 732px){
     .lead__title {
         font-size: 4rem;
         line-height: 4.25rem;
