--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,7 +1,7 @@
 .place__title {
     margin: 0;
     padding: 0;
-    font-family: "Inter";
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -13,6 +13,7 @@
 @media screen and (max-width: 768px){
     .place__title {
         font-size: 42px;
+        line-height: 46px;
     }
 }
 
