--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -8,14 +8,11 @@
     color: #FFFFFF;
     list-style-type: none;
     margin-right: 18px;
+    text-decoration-line: none;
 }
 
 .header__lang-link:nth-of-type(2) {
     margin-right: 0;
-}
-
-.header__lang-link:hover {
-    text-decoration-line: underline;
 }
 
 @media screen and (max-width: 320px){
